[metadata]
name = toolbox
version = 0.1
author = Saxon Hunt
author_email = saxonh.dev@gmail.com
summary = A python toolbox
description_file = README.md
home_page = https://github.com/noxasaxon/toolbox/tree/main/python
requires_dist = setuptools
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging


[options]
package_dir=
    =src
packages = find:
install_requires =
    result
setup_requires =
    pytest-runner
    wheel
tests_requires =
    pytest

[options.extras_require]
dev =
    pytest
    pylint
    Sphinx
    wheel
    sphinx_rtd_theme

[options.packages.find]
where = src
exclude = tests

[build_sphinx]
project = Python Toolbox
release = 0.1.0
copyright = Copyright 2022 Saxon Hunt
config_dir = docs/source
build_dir = docs/build

[aliases]
test=pytest
